--- a/README
+++ b/README
@@ -1,7 +1,6 @@
 starducc
 ========
 
-Starducc is a lightweight file storage system 
-with automatic file versioning. 
-Every update to a file creates a new version, 
+Starducc is a lightweight file storage system with automatic file versioning
+every update to a file creates a new version
 allowing users to restore and manage previous states at any time
